--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,11 +79,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1460 entries, 0 to 1459\n",
+      "Data columns (total 81 columns):\n",
+      "Id               1460 non-null int64\n",
+      "MSSubClass       1460 non-null int64\n",
+      "MSZoning         1460 non-null object\n",
+      "LotFrontage      1201 non-null float64\n",
+      "LotArea          1460 non-null int64\n",
+      "Street           1460 non-null object\n",
+      "Alley            91 non-null object\n",
+      "LotShape         1460 non-null object\n",
+      "LandContour      1460 non-null object\n",
+      "Utilities        1460 non-null object\n",
+      "LotConfig        1460 non-null object\n",
+      "LandSlope        1460 non-null object\n",
+      "Neighborhood     1460 non-null object\n",
+      "Condition1       1460 non-null object\n",
+      "Condition2       1460 non-null object\n",
+      "BldgType         1460 non-null object\n",
+      "HouseStyle       1460 non-null object\n",
+      "OverallQual      1460 non-null int64\n",
+      "OverallCond      1460 non-null int64\n",
+      "YearBuilt        1460 non-null int64\n",
+      "YearRemodAdd     1460 non-null int64\n",
+      "RoofStyle        1460 non-null object\n",
+      "RoofMatl         1460 non-null object\n",
+      "Exterior1st      1460 non-null object\n",
+      "Exterior2nd      1460 non-null object\n",
+      "MasVnrType       1452 non-null object\n",
+      "MasVnrArea       1452 non-null float64\n",
+      "ExterQual        1460 non-null object\n",
+      "ExterCond        1460 non-null object\n",
+      "Foundation       1460 non-null object\n",
+      "BsmtQual         1423 non-null object\n",
+      "BsmtCond         1423 non-null object\n",
+      "BsmtExposure     1422 non-null object\n",
+      "BsmtFinType1     1423 non-null object\n",
+      "BsmtFinSF1       1460 non-null int64\n",
+      "BsmtFinType2     1422 non-null object\n",
+      "BsmtFinSF2       1460 non-null int64\n",
+      "BsmtUnfSF        1460 non-null int64\n",
+      "TotalBsmtSF      1460 non-null int64\n",
+      "Heating          1460 non-null object\n",
+      "HeatingQC        1460 non-null object\n",
+      "CentralAir       1460 non-null object\n",
+      "Electrical       1459 non-null object\n",
+      "1stFlrSF         1460 non-null int64\n",
+      "2ndFlrSF         1460 non-null int64\n",
+      "LowQualFinSF     1460 non-null int64\n",
+      "GrLivArea        1460 non-null int64\n",
+      "BsmtFullBath     1460 non-null int64\n",
+      "BsmtHalfBath     1460 non-null int64\n",
+      "FullBath         1460 non-null int64\n",
+      "HalfBath         1460 non-null int64\n",
+      "BedroomAbvGr     1460 non-null int64\n",
+      "KitchenAbvGr     1460 non-null int64\n",
+      "KitchenQual      1460 non-null object\n",
+      "TotRmsAbvGrd     1460 non-null int64\n",
+      "Functional       1460 non-null object\n",
+      "Fireplaces       1460 non-null int64\n",
+      "FireplaceQu      770 non-null object\n",
+      "GarageType       1379 non-null object\n",
+      "GarageYrBlt      1379 non-null float64\n",
+      "GarageFinish     1379 non-null object\n",
+      "GarageCars       1460 non-null int64\n",
+      "GarageArea       1460 non-null int64\n",
+      "GarageQual       1379 non-null object\n",
+      "GarageCond       1379 non-null object\n",
+      "PavedDrive       1460 non-null object\n",
+      "WoodDeckSF       1460 non-null int64\n",
+      "OpenPorchSF      1460 non-null int64\n",
+      "EnclosedPorch    1460 non-null int64\n",
+      "3SsnPorch        1460 non-null int64\n",
+      "ScreenPorch      1460 non-null int64\n",
+      "PoolArea         1460 non-null int64\n",
+      "PoolQC           7 non-null object\n",
+      "Fence            281 non-null object\n",
+      "MiscFeature      54 non-null object\n",
+      "MiscVal          1460 non-null int64\n",
+      "MoSold           1460 non-null int64\n",
+      "YrSold           1460 non-null int64\n",
+      "SaleType         1460 non-null object\n",
+      "SaleCondition    1460 non-null object\n",
+      "SalePrice        1460 non-null int64\n",
+      "dtypes: float64(3), int64(35), object(43)\n",
+      "memory usage: 924.0+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "df.info()"
    ]
   },
   {
@@ -99,20 +192,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load necessary packages\n",
-    "\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "# remove \"object\"-type features and SalesPrice from `X`\n",
-    "\n",
+    "features = [col for col in df.columns if df[col].dtype in [np.float64, np.int64] and col!='SalePrice']\n",
+    "X = df[features]\n",
     "\n",
     "# Impute null values\n",
+    "for col in X:\n",
+    "    med = X[col].median()\n",
+    "    X[col].fillna(value = med, inplace = True)\n",
     "\n",
-    "\n",
-    "# Create y\n"
+    "# Create y\n",
+    "y = df.SalePrice"
    ]
   },
   {
@@ -124,10 +223,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1460 entries, 0 to 1459\n",
+      "Data columns (total 37 columns):\n",
+      "Id               1460 non-null int64\n",
+      "MSSubClass       1460 non-null int64\n",
+      "LotFrontage      1460 non-null float64\n",
+      "LotArea          1460 non-null int64\n",
+      "OverallQual      1460 non-null int64\n",
+      "OverallCond      1460 non-null int64\n",
+      "YearBuilt        1460 non-null int64\n",
+      "YearRemodAdd     1460 non-null int64\n",
+      "MasVnrArea       1460 non-null float64\n",
+      "BsmtFinSF1       1460 non-null int64\n",
+      "BsmtFinSF2       1460 non-null int64\n",
+      "BsmtUnfSF        1460 non-null int64\n",
+      "TotalBsmtSF      1460 non-null int64\n",
+      "1stFlrSF         1460 non-null int64\n",
+      "2ndFlrSF         1460 non-null int64\n",
+      "LowQualFinSF     1460 non-null int64\n",
+      "GrLivArea        1460 non-null int64\n",
+      "BsmtFullBath     1460 non-null int64\n",
+      "BsmtHalfBath     1460 non-null int64\n",
+      "FullBath         1460 non-null int64\n",
+      "HalfBath         1460 non-null int64\n",
+      "BedroomAbvGr     1460 non-null int64\n",
+      "KitchenAbvGr     1460 non-null int64\n",
+      "TotRmsAbvGrd     1460 non-null int64\n",
+      "Fireplaces       1460 non-null int64\n",
+      "GarageYrBlt      1460 non-null float64\n",
+      "GarageCars       1460 non-null int64\n",
+      "GarageArea       1460 non-null int64\n",
+      "WoodDeckSF       1460 non-null int64\n",
+      "OpenPorchSF      1460 non-null int64\n",
+      "EnclosedPorch    1460 non-null int64\n",
+      "3SsnPorch        1460 non-null int64\n",
+      "ScreenPorch      1460 non-null int64\n",
+      "PoolArea         1460 non-null int64\n",
+      "MiscVal          1460 non-null int64\n",
+      "MoSold           1460 non-null int64\n",
+      "YrSold           1460 non-null int64\n",
+      "dtypes: float64(3), int64(34)\n",
+      "memory usage: 422.1 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "X.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,15 +295,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training r^2: 0.8167411866488126\n",
+      "Testing r^2: 0.7662777228072504\n",
+      "Training MSE: 1201237548.9029667\n",
+      "Testing MSE: 1290317403.21443\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import mean_squared_error, mean_squared_log_error\n",
     "\n",
     "# Split in train and test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y)\n",
     "\n",
-    "# Fit the model and print R2 and MSE for train and test\n"
+    "# Fit the model and print R2 and MSE for train and test\n",
+    "linreg = LinearRegression()\n",
+    "linreg.fit(X_train, y_train)\n",
+    "\n",
+    "print('Training r^2:', linreg.score(X_train, y_train))\n",
+    "print('Testing r^2:', linreg.score(X_test, y_test))\n",
+    "print('Training MSE:', mean_squared_error(y_train, linreg.predict(X_train)))\n",
+    "print('Testing MSE:', mean_squared_error(y_test, linreg.predict(X_test)))"
    ]
   },
   {
@@ -172,14 +341,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import preprocessing\n",
     "\n",
-    "# Scale the data and perform train test split\n",
-    "\n"
+    "# scale the data and perform train test split\n",
+    "X_scaled = preprocessing.scale(X)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled,y)"
    ]
   },
   {
@@ -191,11 +362,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training r^2: 0.7977763044338255\n",
+      "Testing r^2: 0.8559583999829877\n",
+      "Training MSE: 1308050559.2319877\n",
+      "Testing MSE: 837544761.7199503\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "linreg_norm = LinearRegression()\n",
+    "linreg_norm.fit(X_train, y_train)\n",
+    "print('Training r^2:', linreg_norm.score(X_train, y_train))\n",
+    "print('Testing r^2:', linreg_norm.score(X_test, y_test))\n",
+    "print('Training MSE:', mean_squared_error(y_train, linreg_norm.predict(X_train)))\n",
+    "print('Testing MSE:', mean_squared_error(y_test, linreg_norm.predict(X_test)))"
    ]
   },
   {
@@ -214,20 +401,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1460, 43)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create X_cat which contains only the categorical variables"
+    "# Create X_cat which contains only the categorical variables\n",
+    "features_cat = [col for col in df.columns if df[col].dtype in [np.object]]\n",
+    "X_cat = df[features_cat]\n",
+    "\n",
+    "np.shape(X_cat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1460, 252)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Make dummies\n"
+    "# Make dummies\n",
+    "X_cat = pd.get_dummies(X_cat)\n",
+    "np.shape(X_cat)"
    ]
   },
   {
@@ -239,11 +454,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "X_all = pd.concat([pd.DataFrame(X_scaled), X_cat], axis = 1)"
    ]
   },
   {
@@ -255,11 +470,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training r^2: 0.8680498091615673\n",
+      "Testing r^2: -8.811486066363124e+21\n",
+      "Training MSE: 811493001.4511416\n",
+      "Testing MSE: 5.970913776685262e+31\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "X_train, X_test, y_train, y_test = train_test_split(X_all, y)\n",
+    "linreg_all = LinearRegression()\n",
+    "linreg_all.fit(X_train, y_train)\n",
+    "print('Training r^2:', linreg_all.score(X_train, y_train))\n",
+    "print('Testing r^2:', linreg_all.score(X_test, y_test))\n",
+    "print('Training MSE:', mean_squared_error(y_train, linreg_all.predict(X_train)))\n",
+    "print('Testing MSE:', mean_squared_error(y_test, linreg_all.predict(X_test)))"
    ]
   },
   {
@@ -299,11 +531,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training r^2: 0.9337592290678938\n",
+      "Testing r^2: 0.9011689789042344\n",
+      "Training MSE: 407380403.7763897\n",
+      "Testing MSE: 669707131.1016008\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "from sklearn.linear_model import Lasso, Ridge\n",
+    "\n",
+    "lasso = Lasso() \n",
+    "lasso.fit(X_train, y_train)\n",
+    "print('Training r^2:', lasso.score(X_train, y_train))\n",
+    "print('Testing r^2:', lasso.score(X_test, y_test))\n",
+    "print('Training MSE:', mean_squared_error(y_train, lasso.predict(X_train)))\n",
+    "print('Testing MSE:', mean_squared_error(y_test, lasso.predict(X_test)))"
    ]
   },
   {
@@ -315,11 +565,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training r^2: 0.9321009573573986\n",
+      "Testing r^2: 0.9067498614962802\n",
+      "Training MSE: 417578766.3480584\n",
+      "Testing MSE: 631889482.0649463\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "from sklearn.linear_model import Lasso, Ridge\n",
+    "\n",
+    "lasso = Lasso(alpha=10) #Lasso is also known as the L1 norm.\n",
+    "lasso.fit(X_train, y_train)\n",
+    "print('Training r^2:', lasso.score(X_train, y_train))\n",
+    "print('Testing r^2:', lasso.score(X_test, y_test))\n",
+    "print('Training MSE:', mean_squared_error(y_train, lasso.predict(X_train)))\n",
+    "print('Testing MSE:', mean_squared_error(y_test, lasso.predict(X_test)))"
    ]
   },
   {
@@ -338,11 +606,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training r^2: 0.9203170257212001\n",
+      "Testing r^2: 0.8882126628015863\n",
+      "Training MSE: 490049885.8787815\n",
+      "Testing MSE: 757502817.0162718\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "from sklearn.linear_model import Lasso, Ridge\n",
+    "\n",
+    "ridge = Ridge() #Lasso is also known as the L1 norm.\n",
+    "ridge.fit(X_train, y_train)\n",
+    "print('Training r^2:', ridge.score(X_train, y_train))\n",
+    "print('Testing r^2:', ridge.score(X_test, y_test))\n",
+    "print('Training MSE:', mean_squared_error(y_train, ridge.predict(X_train)))\n",
+    "print('Testing MSE:', mean_squared_error(y_test, ridge.predict(X_test)))"
    ]
   },
   {
@@ -354,11 +640,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training r^2: 0.8967005011621836\n",
+      "Testing r^2: 0.8824602107869872\n",
+      "Training MSE: 635291391.6050385\n",
+      "Testing MSE: 796483069.2972213\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "from sklearn.linear_model import Lasso, Ridge\n",
+    "\n",
+    "ridge = Ridge(alpha = 10) #Lasso is also known as the L1 norm.\n",
+    "ridge.fit(X_train, y_train)\n",
+    "print('Training r^2:', ridge.score(X_train, y_train))\n",
+    "print('Testing r^2:', ridge.score(X_test, y_test))\n",
+    "print('Training MSE:', mean_squared_error(y_train, ridge.predict(X_train)))\n",
+    "print('Testing MSE:', mean_squared_error(y_test, ridge.predict(X_test)))"
    ]
   },
   {
@@ -384,20 +688,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# number of Ridge params almost zero"
+    "# number of Ridge params almost zero\n",
+    "print(sum(abs(ridge.coef_) < 10**(-10)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74\n"
+     ]
+    }
+   ],
    "source": [
-    "# number of Lasso params almost zero"
+    "# number of Lasso params almost zero\n",
+    "print(sum(abs(lasso.coef_) < 10**(-10)))"
    ]
   },
   {
@@ -409,11 +731,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "289"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "len(lasso.coef_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2560553633217993"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(abs(lasso.coef_) < 10**(-10))/289"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lasso was very effective to essentially perform variable selection and remove about 25% of the variables from your model!"
    ]
   },
   {
@@ -433,9 +795,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -447,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
